[build-system]
requires = ["setuptools >= 70", "python >= 3.9"]
build-backend = "setuptools.build_meta"

[project]
name = "homework 3"
authors = [
  { name="Ligo Scientific Collaboration (LSC)" },
  { name="Lois Tanglao", email="loistanglao@berkeley.edu" }
]
description = "a library for ligotools"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "numpy", "scipy", "h5py", "matplotlib", "ipykernel"
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["ligo", "losc"]
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-loistanglao"
Issues = "https://github.com/UCB-stat-159-f25/hw3-loistanglao/issues"

[tool.setuptools]
packages = ["ligotools"]